# Zero_Perams-king

./: .gitignore  AXIMA_ISSUES.md  BATTLE_PLAN.md  Colab.json  Makefile  README.md  SECURITY.md  config.toml  cse_builder  pyproject.toml  zero_parameter_manifest.json
docs/: AXIMA_CODER_PLAN.md  COLAB_PLAN.md  COLAB_VISION_GUIDE.md  CREATOR_V2_PLAN.md  HOW_IT_WORKS.md  INVENTIONS.md  KNOWLEDGE_INDEXER_PLAN.md  MASTER_GAP_FIXES.md  MATH_ENGINE_PLAN.md  MODES.md  MULTILINGUAL_PLAN.md  PHYSICS_ENGINE_PLAN.md  PROMETHEUS_ROADMAP.md  PROMETHEUS_TEST_RESULTS.md  SESSION_WORK_LOG.md  STATUS.md  STRICT_BENCHMARK.md  TEST_REPORT.md  UPGRADE_PLAN.md  VOICE_CALIBRATION_GUIDE.md  VOICE_ENGINE_PLAN.md
docs/architecture/: CONTRACTS.md  OVERVIEW.md
docs/benchmarks/: METHODOLOGY.md
docs/decisions/: ADR-001-zero-parameter.md  ADR-002-microkernel.md  ADR-003-no-eval.md
docs/threat-model/: THREATS.md
evals/: run_cosmic_evals.py  run_evals.py
evals/codegen/: cases.json
evals/hidden_manifest/: README.md  (+2 more)
models/: object_classifier_v1_categories.json  object_classifier_v2_categories.json
scripts/: batch_1_countries.py  batch_2_people.py  batch_3_science.py  batch_4_geography.py  batch_5_culture.py  batch_6_technology.py  batch_7_taxonomy.py  benchmark_300.py  benchmark_new.py  build_cse.py  colab_vision_train.py  continue_wikidata.py  cosmic_expand.py  cosmic_expand2.py  expand_knowledge.py  expand_more_topics.py  full_benchmark.py  import_conceptnet.py  mega_expand.py  run_all.py  run_batches_throttled.py  validate_and_dedup.py
tests/: __init__.py  test_parse_all.py
(+515 files in other folders)
