[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axima"
version = "0.1.0"
description = "Offline Symbolic Intelligence Engine - Zero Learned Parameters"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
axima = "axima.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
